--- a/client/src/index.css
+++ b/client/src/index.css
@@ -19,7 +19,8 @@ body {
   padding: 0;
   min-width: 320px;
   min-height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
 }
 
 #root {
